--- a/static/static_dev/css/bootstrap.css
+++ b/static/static_dev/css/bootstrap.css
@@ -6393,7 +6393,7 @@ text-align: center;
     color: #ffffff;
     font: inherit;
     margin: 0;
-    background: green;
+    background: #02845e;
     border-color: #1eb90f;
     width: 130px;
     height: 45px;
