--- a/templates/in_main.html
+++ b/templates/in_main.html
@@ -25,7 +25,7 @@
       </ol>
       <div class="carousel-inner">
         <div class="item active">
-          <img  alt="First slide" src="{% static "images/1.jpg" %}">
+          <img  alt="First slide" src="{% static "images/3.jpg" %}">
           <div class="container">
             <div class="carousel-caption">
               <h1>ТОВ "ЛКО ГРУП"</h1>
@@ -43,7 +43,7 @@
           </div>
         </div>
         <div class="item" >
-          <img  alt="Third slide" src="{% static "images/3.jpg" %}">
+          <img  alt="Third slide" src="{% static "images/1.jpg" %}">
           <div class="container">
             <div class="carousel-caption">
               <h1>ТОВ "ЛКО ГРУП"</h1>
@@ -63,11 +63,11 @@
  <hr class="featurette-divider" style="border-color: #024e38">
    <div class="row featurette" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; background-color: #ffffff; background: linear-gradient(45deg,#ffffff, #fffbdf)">
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; margin: 10px;" data-src="holder.js/500x500/auto" alt="500x500" src="{% static "images/4.jpg" %}">
+          <img class="featurette-image img-responsive" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; margin: 10px;" data-src="holder.js/500x500/auto" alt="500x500" src="{% static "images/IMG_7322.JPG" %}">
         </div>
         <div class="col-md-7">
           <h2 class="featurette-heading">ТОВ "ЛКО ГРУП" <span class="text-muted">На ринку з 2005 року</span></h2>
-          <p style="color: #02845e; text-align: justify; margin: 15px 15px 15px 15px;" class="lead">З моменту заснування підприємство стало  офіційним дистриб'ютором ТМ "Оболонь" на території міста Києва та Київської області. Завдяки професіаналізму та надійності команди ми розширили свою діяльність. На даний час наша компанія є надійним партнером у сфері реалізації алкогольних напоїв і продуктів харчування більше ніж 30 торгівельних марок по всій території країни. </p>
+          <p style="color: #02845e; text-align: justify; margin: 15px 15px 15px 15px;" class="lead">З моменту заснування підприємство стало  офіційним дистриб'ютором ТМ "Оболонь" на території міста Києва та Київської області. Завдяки високій якості логістичних послуг, професіоналізму та надійності команди,  кількоість виробників, що співрацюють з нами  постійно зростає. На даний час наша компанія є надійним партнером у сфері реалізації алкогольних напоїв і продуктів харчування більше ніж 30 торгівельних марок по всій території країни. </p>
                 
         </div>
     </div>
@@ -79,11 +79,11 @@
 
       <div class="row featurette" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; background-color: #ffffff; background: linear-gradient(45deg,#ffffff, #fffbdf)">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Наш офіс.</h2>
-          <p style="color: #02845e; text-align: justify;" class="lead">Офісні приміщення оснащені новітньою технікою та всім необхідним приладдям для комфорту співробітників.  </p>
+          <h2 class="featurette-heading">Наш офіс</h2>
+          <p style="color: #02845e; text-align: justify;" class="lead">Головний актив компанії - її співробітники. Ми цінуємо професіоналізм нашої команди та максимально сприяємо його зростанню. Дружній колектив, робочі місця оснащені новітньою технікою та всім необхідним приладдям, створюють максимальний рівень комфорту нашим працівникам.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; margin: 10px;" data-src="holder.js/500x500/auto" alt="500x500" src="{% static "images/ofice.jpg" %}">
+          <img class="featurette-image img-responsive" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; margin: 10px;" data-src="holder.js/500x500/auto" alt="500x500" src="{% static "images/ofice-2.jpg" %}">
         </div>
       </div>
 
@@ -94,7 +94,7 @@
           <img class="featurette-image img-responsive" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; margin: 10px;" data-src="holder.js/500x500/auto" alt="500x500" src="{% static "images/sklad.JPG" %}">
         </div>
         <div class="col-md-7">
-          <h2 class="featurette-heading">Сучасні складські приміщення.</h2>
+          <h2 class="featurette-heading">Сучасні складські приміщення</h2>
           <p style="color: #02845e; text-align: justify;" class="lead">Підприємство володіє складськими приміщеннями загальною площею понад 14000 квадратних метрів. Для збереження якості продукції створені всі умови включаючи підтримку температурного режиму.</p>
         </div>
       </div>
@@ -103,11 +103,11 @@
 
       <div class="row featurette" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; background-color: #ffffff; background: linear-gradient(45deg,#ffffff, #fffbdf);">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Транспорт. </h2>
-          <p style="color: #02845e" class="lead"> Автопарк компанії налічує більше 200 одиниць техніки, основну масу яких складають ватнажівки вантажопідйомністю від 3 тисяч тон. Технічне обслуговування силами власної станції технічного обслуговування.</p>
+          <h2 class="featurette-heading">Транспорт</h2>
+          <p style="color: #02845e" class="lead"> Автопарк компанії налічує більше 350 одиниць техніки, основну масу яких складають ватнажівки вантажопідйомністю від 3 тон. Догляд за транспортними засобами здійснюється силами власної станції технічного обслуговування.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; margin: 10px;" data-src="holder.js/500x500/auto" alt="500x500" src="{% static "images/6.jpg" %}">
+          <img class="featurette-image img-responsive" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; margin: 10px;" data-src="holder.js/500x500/auto" alt="500x500" src="{% static "images/avto.jpg" %}">
         </div>
       </div>
 
@@ -134,7 +134,7 @@
 
 <div class="row" style=" background-color: #fffff">  
   <div class="col-lg-12" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; background: linear-gradient(45deg,#ffffff, #fffbdf); margin: 1px 1px 5px 1px; "> 
-  <p style="margin-top: 25px; color: #02845e;  text-align: center; font-size: 30px; font-family: Snell Roundhand, cursive;"> Основними покупцями підприємства є:</p>   
+  <p style="margin-top: 25px; color: #02845e;  text-align: center; font-size: 30px; font-family: Bitter,Helvetica,Arial,sans-serif;"> Основними покупцями підприємства є:</p>   
          
   <div class="card" style="display: flex; justify-content: center; align-items: center; flex-wrap: wrap;">
 
@@ -155,7 +155,7 @@
   <div class="col-md-7">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12101.399501274043!2d30.564413038810393!3d50.38508921221709!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4c60a18c96629%3A0x39c62430a7385163!2z0JvQutC-!5e0!3m2!1sru!2sua!4v1529586435126"  width="100%" height="400" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; margin: 10px;" allowfullscreen></iframe>         
   </div>
-  <div class="col-md-5">
+  <div class="col-md-5" style="color: #02845e; font-family: Bitter,Helvetica,Arial,sans-serif;">
     <h2 class="featurette-heading">Ми тут!</h2>
       <p class="lead">Карта допоможе знайти дорогу до нас.</p>
   </div>
