--- a/templates/main.html
+++ b/templates/main.html
@@ -45,9 +45,9 @@
 <!-- Модальное Окно  -->
 <div id="overlay">
     <div class="popup">
-        <p style="margin-top: 5px; text-align: center; color: green; font-size: 25px; font-family: Bitter,Helvetica,Arial,sans-serif;"> УВАГА! </p>
-        <p style="text-align: center; color: green; font-size: 85px"> 18+ </p>
-        <p style="text-align: center; color: green; font-size: 25px">Вам виконалось 18 років?</p> 
+        <p style="margin-top: 5px; text-align: center; color: #02845e; font-size: 25px; font-family: Bitter,Helvetica,Arial,sans-serif;"> УВАГА! </p>
+        <p style="text-align: center; color: #02845e; font-size: 85px"> 18+ </p>
+        <p style="text-align: center; color: #02845e; font-size: 25px">Вам виповнилось 18 років?</p> 
 
         <div class = "Absolute-Center">
           <button class="butt" onclick="document.getElementById('overlay').style.display='none';">Так</button>
