--- a/templates/vacancy_nivki.html
+++ b/templates/vacancy_nivki.html
@@ -22,7 +22,7 @@
                       
               <div class="row">
                 <div class="col-lg-12">
-                  <p style="margin: 0px 15px 0px 15px; font-family: Snell Roundhand, cursive; font-size: 23px; text-align: center;"> <a style="color: #02845e" href="{% url 'get_vacancy_nivki' vacancy.id %}">{{ vacancy.name_vacancy }}</a></p>                  
+                  <p style="margin: 0px 15px 0px 15px; font-family: Bitter,Helvetica,Arial,sans-serif; font-size: 23px; text-align: center;"> <a style="color: #02845e" href="{% url 'get_vacancy_nivki' vacancy.id %}">{{ vacancy.name_vacancy }}</a></p>                  
                 </div>
               </div>
               <hr class="featurette-divider" style="border-color: #02845e; margin: 15px 375px 15px 375px;"> 
@@ -30,7 +30,7 @@
         <div class="myClass7" style="box-shadow: 0 0 0 0 rgba(0, 0, 0, 0); "> 
         	<div class="row">
         		<div class="col-lg-12">
-        			<p style="color: #02845e; text-align: center; font-family: Snell Roundhand, cursive; font-size: 15px;"> Місце знаходження</p>
+        			<p style="color: #02845e; text-align: center; font-family: Bitter,Helvetica,Arial,sans-serif; font-size: 15px;"> Місце знаходження</p>
         		</div>
         	</div>         
             <div class="row">
