--- a/templates/brand_list.html
+++ b/templates/brand_list.html
@@ -6,7 +6,7 @@
 <div class="container marketing">
 	<div class="row" style=" background-color: #fffff"> 
        <div class="col-lg-12" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px;  background: linear-gradient(45deg,#ffffff, #fffbdf); margin: 75px 1px 5px 1px;">    
-       <p style="color: #02845e;  text-align: center; font-size: 30px; font-family: Cuprum,  sans-serif;">Нам довіряють свою продукцію найкращі бренди! </p>
+       <p style="color: #02845e;  text-align: center; font-size: 30px; font-family: Bitter,Helvetica,Arial,sans-serif;">Нам довіряють свою продукцію найкращі бренди! </p>
        <div class="section">       
           <div class="container1" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; background: linear-gradient(45deg,#ffffff, #fffbdf);">      
           {% for brand in brands %}
