--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -12,28 +12,28 @@
         <div class="col-lg-12" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; padding-top: 20px; background: linear-gradient(45deg,#ffffff, #fffbdf);">
           <div class="row">
            <div class="col-lg-12" style="padding-top: 20px">
-             <p style="color: #02845e; text-align: center; font-size: 30px; font-family: Cuprum,  sans-serif;">Зв'язок з нами</p>
+             <p style="color: #02845e; text-align: center; font-size: 30px; font-family: Bitter,Helvetica,Arial,sans-serif;">Зв'язок з нами</p>
           </div>
             </div>  
         <div class="row"> 
         	       	
           <div class="myClass7">       
-            <p style="color: #02845e; margin: 0px 15px 0px 15px; font-family: Cuprum, sans-serif; font-size: 32px; text-align: center; text-align: center;"> ТОВ "ЛКО ГРУП" </p>
-            <p style="color: #02845e; margin: 0px 15px 0px 15px; font-family: Cuprum, sans-serif; font-size: 14px; text-align: center; text-align: center;"> ЄДРПОУ: 40762306</p>
-            <p style="color: #02845e; margin: 0px 15px 0px 15px; font-family: Cuprum, sans-serif; font-size: 14px; text-align: center; text-align: center;"> 03062, м.Київ, вул. Екскаваторна, буд. 35</p>
+            <p style="color: #02845e; margin: 0px 15px 0px 15px; font-family: Bitter,Helvetica,Arial,sans-serif; font-size: 32px; text-align: center; text-align: center;"> ТОВ "ЛКО ГРУП" </p>
+            <p style="color: #02845e; margin: 0px 15px 0px 15px; font-family: Bitter,Helvetica,Arial,sans-serif; font-size: 14px; text-align: center; text-align: center;"> ЄДРПОУ: 40762306</p>
+            <p style="color: #02845e; margin: 0px 15px 0px 15px; font-family: Bitter,Helvetica,Arial,sans-serif; font-size: 14px; text-align: center; text-align: center;"> 03062, м.Київ, вул. Екскаваторна, буд. 35</p>
             <hr class="featurette-divider" style="border-color: #02845e; margin: 15px 375px 15px 375px;">   
-            <p style="color: #02845e; margin: 0px 15px 0px 15px; font-family: Cuprum, sans-serif; font-size: 22px; text-align: center; text-align: center;"><i class="fas fa-phone"></i> 044 207-43-03 </p>
+            <p style="color: #02845e; margin: 0px 15px 0px 15px; font-family: Bitter,Helvetica,Arial,sans-serif; font-size: 22px; text-align: center; text-align: center;"><i class="fas fa-phone"></i> 044 207-43-03 </p>
             <hr class="featurette-divider" style="border-color: #02845e; margin: 15px 375px 15px 375px;">
-            <p style="color: #02845e; margin: 0px 15px 0px 15px; font-family: Cuprum, sans-serif; font-size: 22px; text-align: center; text-align: center;"><i class="fas fa-fax"></i> 044 207-43-11 </p>
+            <p style="color: #02845e; margin: 0px 15px 0px 15px; font-family: Bitter,Helvetica,Arial,sans-serif; font-size: 22px; text-align: center; text-align: center;"><i class="fas fa-fax"></i> 044 207-43-11 </p>
             <hr class="featurette-divider" style="border-color: #02845e; margin: 15px 375px 15px 375px;">
-            <p style="color: #02845e; margin: 0px 15px 0px 15px; font-family: Cuprum, sans-serif; font-size: 22px; text-align: center; text-align: center;"><i class="fas fa-envelope"></i> ooolko.p@gmail.com </p>
+            <p style="color: #02845e; margin: 0px 15px 0px 15px; font-family: Bitter,Helvetica,Arial,sans-serif; font-size: 22px; text-align: center; text-align: center;"><i class="fas fa-envelope"></i> ooolko.p@gmail.com </p>
             <hr class="featurette-divider" style="border-color: #02845e; margin: 15px 375px 15px 375px;">       
 
                
           </div>
 
 
-             <p style="margin-top: 35px; color: #02845e; text-align: center; font-size: 30px; font-family: Cuprum,  sans-serif;">Карта проїзду</p>
+             <p style="margin-top: 35px; color: #02845e; text-align: center; font-size: 30px; font-family: Bitter,Helvetica,Arial,sans-serif;">Карта проїзду</p>
           
 
           <div class="myClass7">    
@@ -42,7 +42,7 @@
 
                
           </div>
-          <p style="margin-top: 35px; color: #02845e; text-align: center; font-size: 30px; font-family: Cuprum,  sans-serif;">Напишіть нам.</p>
+          <p style="margin-top: 35px; color: #02845e; text-align: center; font-size: 30px; font-family: Bitter,Helvetica,Arial,sans-serif;">Напишіть нам.</p>
           <wrapper>
             <div id="myBtn" class="dws1">
               <div id="myBtn" class="pulse1">
@@ -57,14 +57,14 @@
             
             <hr class="featurette-divider" style="border-color: #02845e; margin: 15px 375px 15px 375px;"> 
             {% for message in messages %}        
-            <p style="color: #02845e; margin: 0px 15px 0px 15px; font-family: Cuprum, sans-serif; font-size: 22px; text-align: center; text-align: center;"> {{ message.visitor}}</p>
-            <p style="color: #02845e; margin: 0px 15px 0px 15px; font-family: Cuprum, sans-serif; font-size: 16px; text-align: center; text-align: center;"> {{ message.text}}</p>
-            <p style="color: #02845e; margin: 0px 15px 0px 15px; font-family: Cuprum, sans-serif; font-size: 12px; text-align: center; text-align: center;"> {{ message.date}}</p>
+            <p style="color: #02845e; margin: 0px 15px 0px 15px; font-family: Bitter,Helvetica,Arial,sans-serif; font-size: 22px; text-align: center; text-align: center;"> {{ message.visitor}}</p>
+            <p style="color: #02845e; margin: 0px 15px 0px 15px; font-family: Bitter,Helvetica,Arial,sans-serif; font-size: 16px; text-align: center; text-align: center;"> {{ message.text}}</p>
+            <p style="color: #02845e; margin: 0px 15px 0px 15px; font-family: Bitter,Helvetica,Arial,sans-serif; font-size: 12px; text-align: center; text-align: center;"> {{ message.date}}</p>
             
 
           {% for test in message.comments_set.all %}
-          <p style="color: red; margin: 25px 15px 0px 15px; font-family: Cuprum, sans-serif; font-size: 12px; text-align: center; text-align: center;">Адміністрація:</p>
-          <p style="color: red; margin: 0px 15px 0px 15px; font-family: Cuprum, sans-serif; font-size: 12px; text-align: center; text-align: center;"> {{test.comments_text}}</p>          
+          <p style="color: red; margin: 25px 15px 0px 15px; font-family: Bitter,Helvetica,Arial,sans-serif; font-size: 12px; text-align: center; text-align: center;">Адміністрація:</p>
+          <p style="color: red; margin: 0px 15px 0px 15px; font-family: Bitter,Helvetica,Arial,sans-serif; font-size: 12px; text-align: center; text-align: center;"> {{test.comments_text}}</p>          
           {% endfor %} 
           <hr class="featurette-divider" style="border-color: #02845e; margin: 15px 375px 15px 375px;">              
           {% endfor %}
@@ -104,4 +104,4 @@
             
     </div>
       <!-- FOOTER -->
-{% endblock %}
+{% endblock %}s
