--- a/templates/vacancy.html
+++ b/templates/vacancy.html
@@ -13,7 +13,7 @@
         <div class="col-lg-12" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; padding-top: 20px; background: linear-gradient(45deg,#ffffff, #fffbdf);">
           <div class="row">
            <div class="col-lg-12" style="padding-top: 20px">
-              <p style="color: #02845e; text-align: center; font-size: 30px; font-family: Snell Roundhand, cursive;">Підприємству необхідні наступні вакансії</p>
+              <p style="color: #02845e; text-align: center; font-size: 30px; font-family: Bitter,Helvetica,Arial,sans-serif;">Підприємству необхідні наступні вакансії</p>
             </div>  
           </div>
         <div class="row">     	
@@ -22,11 +22,11 @@
 
                <div class="row">
                 <div class="col-lg-12">
-                  <p style="color: #02845e; margin: 0px 15px 0px 15px; font-family: Snell Roundhand, cursive; font-size: 23px; text-align: center;"> {{ vacancy.name_vacancy }}</p>
+                  <p style="color: #02845e; margin: 0px 15px 0px 15px; font-family: Bitter,Helvetica,Arial,sans-serif; font-size: 23px; text-align: center;"> {{ vacancy.name_vacancy }}</p>
                    <hr class="featurette-divider" style="border-color: #02845e; margin: 15px 375px 15px 375px;">
-                  <p style="color: #02845e; margin: 0px 15px 0px 15px; font-family: Snell Roundhand, cursive; font-size: 17px; text-align: center;">{{ vacancy.text }}</p>
+                  <p style="text-align: justify; color: #02845e; margin: 0px 15px 0px 15px; font-family: Bitter,Helvetica,Arial,sans-serif; font-size: 17px;">{{ vacancy.text }}</p>
                   <hr class="featurette-divider" style="border-color: #02845e; margin: 15px 75px 15px 75px;">             
-                  <p style="color: #02845e; margin: 0px 15px 0px 15px; font-family: Snell Roundhand, cursive; font-size: 11px; text-align: center;">{{ vacancy.date }}</p>
+                  <p style="color: #02845e; margin: 0px 15px 0px 15px; font-family: Bitter,Helvetica,Arial,sans-serif; font-size: 11px; text-align: center;">{{ vacancy.date }}</p>
                   
                 </div>
               </div>
