--- a/templates/vacancy_zhitomir.html
+++ b/templates/vacancy_zhitomir.html
@@ -13,7 +13,7 @@
         <div class="col-lg-12" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; padding-top: 20px; background: linear-gradient(45deg,#ffffff, #fffbdf);">
         <div class="row">
            <div class="col-lg-12" style="padding-top: 20px">
-             <p style="color: #02845e; text-align: center; font-size: 30px; font-family: Snell Roundhand, cursive;">Підприємству необхідні наступні вакансії</p>
+             <p style="color: #02845e; text-align: center; font-size: 30px; font-family: Bitter,Helvetica,Arial,sans-serif;">Підприємству необхідні наступні вакансії</p>
             </div>  
           </div>
         <div class="myClass7">          
@@ -21,7 +21,7 @@
         {% for vacancy in vacancys %}                   
               <div class="row">
                 <div class="col-lg-12">
-                  <p style="margin: 0px 15px 0px 15px; font-family: Snell Roundhand, cursive; font-size: 23px; text-align: center;"><a style="color: #02845e" href="{% url 'get_vacancy_zhitomir' vacancy.id %}"> {{ vacancy.name_vacancy }}</a></p>                  
+                  <p style="margin: 0px 15px 0px 15px; font-family: Bitter,Helvetica,Arial,sans-serif; font-size: 23px; text-align: center;"><a style="color: #02845e" href="{% url 'get_vacancy_zhitomir' vacancy.id %}"> {{ vacancy.name_vacancy }}</a></p>                  
                 </div>
               </div>
             <hr class="featurette-divider" style="border-color: #02845e; margin: 15px 375px 15px 375px;">   
@@ -29,7 +29,7 @@
         <div class="myClass7" style="box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);"> 
         	<div class="row">
         		<div class="col-lg-12">
-        			<p style="color: #02845e; text-align: center; font-family: Snell Roundhand, cursive; font-size: 15px;"> Місце знаходження</p>
+        			<p style="color: #02845e; text-align: center; font-family: Bitter,Helvetica,Arial,sans-serif; font-size: 15px;"> Місце знаходження</p>
         		</div>
         	</div>         
             <div class="row">
