--- a/templates/in_main.html
+++ b/templates/in_main.html
@@ -63,7 +63,7 @@
  <hr class="featurette-divider" style="border-color: #024e38">
    <div class="row featurette" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; background-color: #ffffff; background: linear-gradient(45deg,#ffffff, #fffbdf)">
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; margin: 10px;" data-src="holder.js/500x500/auto" alt="500x500" src="{% static "images/IMG_73221.JPG" %}">
+          <img class="featurette-image img-responsive" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; margin: 10px;" data-src="holder.js/500x500/auto" alt="500x500" src="{% static "images/IMG_73221.jpg" %}">
         </div>
         <div class="col-md-7">
           <h2 class="featurette-heading">ТОВ "ЛКО ГРУП" <span class="text-muted">На ринку з 2005 року</span></h2>
@@ -91,7 +91,7 @@
 
       <div class="row featurette" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; background-color: #ffffff; background: linear-gradient(45deg,#ffffff, #fffbdf)">
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; margin: 10px;" data-src="holder.js/500x500/auto" alt="500x500" src="{% static "images/sklad1.JPG" %}">
+          <img class="featurette-image img-responsive" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; margin: 10px;" data-src="holder.js/500x500/auto" alt="500x500" src="{% static "images/sklad1.jpg" %}">
         </div>
         <div class="col-md-7">
           <h2 class="featurette-heading">Сучасні складські приміщення</h2>
@@ -160,6 +160,8 @@
       <p class="lead">Карта допоможе знайти дорогу до нас.</p>
   </div>
   </div>
+
+
 
 
 
